[package]
name = "iv_compat"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "25.0.1"
configparser = "3.1.0"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
minijinja = "2.2.0"
tower-http = { version = "0.5.2", features = ["fs"] }
serde_urlencoded = "0.7.1"
itertools = "0.9.0"