[package]
name = "iv_compatibility"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
tower-http = { version = "0.5.2", features = ["fs"] }
minijinja = "2.2.0"
configparser = "3.1.0"
mysql = "25.0.1"
serde = "1.0.209"
serde_json = "1.0.127"
itertools = "0.9.0"
petgraph = "0.6.5"